--- a/.gitignore
+++ b/.gitignore
@@ -35,18 +35,19 @@ Release/
 *.klg
 *.lkc
 
-<<<<<<< HEAD
+
 # 不想同步的
 *.local
 *.temp
 *.vt
 *.dat
-=======
 vn.ctp/build/*
 vn.lts/build/*
 .idea
->>>>>>> 65aac25731772259bf2d4049e7adbe92750ea01d
+
 
 vn.trader/ctaAlgo/data/*
 vn.trader/build/*
 vn.trader/dist/*
+vn.trader/ctpGateway/CTP_connect.json
+vn.trader/temp/
